# OpenGoldSrc

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  ClProtocolParse.txt  README.md  TODO.md  format.sh
ogs/: CMakeLists.txt  hlsdk_pch.hpp
ogs/common/: BaseSystemModule.cpp  BaseSystemModule.h  CMakeLists.txt  FactorySharedLib.hpp  IAdminServer.h  IBaseSystem.h  IConsole.hpp  IGameServerData.h  IObjectContainer.h  IRender.hpp  ISound.hpp  ISystemModule.h  IVGuiModule.h  ObjectDictionary.cpp  ObjectDictionary.h  ObjectList.cpp  ObjectList.h  SteamAppStartUp.cpp  SteamAppStartUp.h  SteamCommon.h  TextConsoleUnix.cpp  TokenLine.h  maintypes.h  mathlib_local.hpp  netapi.cpp  netapi.h  qlimits.h  ref.hpp  textconsole.cpp  textconsole.h  userid.h  userid_rehlds.h  vmodes.h
ogs/core/: CMakeLists.txt
ogs/dbg/: CMakeLists.txt  dbg.cpp  dbg.h  dbg_temp.cpp
ogs/dedicated/: CMakeLists.txt  conproc.cpp  conproc.hpp  dedicated.rc  engine.cpp  sys_ded.cpp  sys_ded.hpp
ogs/dedicated-legacy/: conproc.cpp  conproc.hpp  dedicated.hpp  enginecallback.hpp  exports.hpp  resource.hpp  sys_ded.cpp  sys_ded.hpp
ogs/demoplayer/: CMakeLists.txt  DemoPlayer.cpp  DemoPlayer.hpp  Exports.cpp
ogs/engine/: CMakeLists.txt  ClEngFuncsNull.cpp  ClientDLLFuncsNull.cpp  ClientDLLFuncsProvider.h  CmdBuffer.h  CvarSystem.h  Debug.cpp  Debug.h  DedicatedServerAPI.cpp  DedicatedServerAPI.h  DemoAPINull.cpp  DemoAPIProvider.h  EngFuncs.cpp  EngFuncsNull.cpp  Engine.cpp  Engine.h  EngineAPI.cpp  EngineAPI.h  EventAPINull.cpp  EventAPIProvider.h  Host.cpp  Host.h  IEngine.h  LocalClient.cpp  LocalClient.h  ModInfo.cpp  ModInfo.h  SvEngFuncs.cpp  SvEngFuncsNull.cpp  TriAPINull.cpp  TutorAPI.cpp  cdll_int.h  com_custom.cpp  com_custom.h  common.cpp  common.h  consistency.h  custom_int.h  decal.h  demo_api.cpp  (+40 more)
ogs/engine-merge/: ReHLDS.sln  asm_draw.h  bothdefs.h  bspfile.h  bspfile2.h  buildnum.c  client.h  cmd.c  common.c  common.cpp  common.h  common2.c  common2.h  g_local.h  game.h  glquake.h  glquake2.h  mathlib.c  mathlib.h  model.c  model.cpp  model2.h  modelgen.h  modelgen2.h  modelqwsv.c  mplib.cpp  net.hpp  nonintel.c  nonintel.cpp  pr_comp.h  pr_edict.cpp  pr_exec.cpp  progdefs.h  protocol.h  protocol2.h  q_shared.c  q_shared.h  qmenu.h  quakeasm.h  quakedef.h  (+18 more)
ogs/engine-zombie/: commondef.hpp  commondef2.hpp  precompiled.hpp
ogs/filesystem/: CMakeLists.txt  FileSystemImpl.h  FileSystemImpl.hpp  LoggedFileSystem.hpp
ogs/gameui/: CMakeLists.txt  GameConsole.h  GameConsole.hpp  GameUI.h  GameUI.hpp
ogs/hltv/: CMakeLists.txt
ogs/hookers/: 6132_hooker.cpp  CMakeLists.txt  engine_pch.h  hooker.cpp  hooker.h  hooker.hpp  main.cpp  main_swds.cpp  memory.cpp  memory.h  memory.hpp  rehlds_debug.cpp  rehlds_debug.h  rehlds_debug.hpp
ogs/interface/: IClientVGUI.h  IFileSystem.h  IGameUIFuncs.h  IPlugins.h  IPluginsV1.h  IRegistry.h  IServerBrowser.h
ogs/launcher/: CMakeLists.txt  ExceptHandle.hpp  LoadBlob.cpp  LoadBlob.hpp  launcher.cpp  launcher.rc  launcher_mini_temp.cpp  launcher_old.cpp  plat_win.cpp  platform.h  platform.hpp  registry.cpp  resource.hpp  sys.hpp  sys_launcher.cpp
ogs/launcher-gsr/: launcher.cpp
ogs/ogsapi/: IEngineClient.hpp  IEngineServer.hpp
ogs/ogsnext/: BaseUI.cpp  BaseUI.hpp  EdictHandle.cpp  EdictHandle.hpp  EdictPool.cpp  EdictPool.hpp  GameClient.cpp  GameClient.hpp  GameWorld.cpp  GameWorld.hpp  IConsole.hpp  IWorld.hpp  InputHandler.cpp  InputHandler.hpp  KeyDestState.cpp  LocalWorld.cpp  LocalWorld.hpp  Menu.hpp  eventapi.cpp
ogs/particleman/: CMakeLists.txt  ParticleManImpl.hpp  particleman.h
ogs/public/: IBaseUI.h  ICareerUI.h  IClientVGUI.h  ICommandLine.h  IEngineSurface.h  IEngineVGui.h  IGameUIFuncs.h  IRegistry.h  OfflineMode.h  basetypes.h  commonmacros.h  engine_hlds_api.h  engine_launcher_api.h  icvar.h  idedicatedexports.h  iosutil.h  registry.cpp  savegame_version.h  utlbuffer.h  utlmemory.h  utlrbtree.h
ogs/rehlds/: FlightRecorderImpl.cpp  FlightRecorderImpl.h  RehldsRuntimeConfig.cpp  RehldsRuntimeConfig.h  flight_recorder.cpp  flight_recorder.h  hookchains_impl.cpp  hookchains_impl.h  jitasm.h  platform.h  platform_rehlds.cpp  platform_rehlds.h  precompiled.h  rehlds_api_impl.cpp  rehlds_api_impl.h  rehlds_interfaces_impl.cpp  rehlds_interfaces_impl.h  rehlds_pch.hpp  rehlds_security.cpp  rehlds_security.h  structSizeCheck.cpp
ogs/render/: CMakeLists.txt
ogs/renderdll/: RenderImpl.hpp
ogs/sound/: LoggedSoundImpl.cpp  SoundImpl.cpp  SoundImpl.hpp
ogs/testsuite/: CMakeLists.txt  anonymizer.cpp  anonymizer.h  funccalls.cpp  funccalls.h  player.cpp  player.h  recorder.cpp  recorder.h  testsuite.cpp  testsuite.h
ogs/tier0/: CMakeLists.txt  assert_dialog.cpp  cpu.cpp  cpu_posix.cpp  dbg.cpp  fasttimer.cpp  fasttimer.h  mem.cpp  memdbgon.h  memvalidate.cpp  minidump.cpp  platform.cpp  platform_linux.cpp  pme.cpp  testthread.cpp  threadtools.cpp  tier0.cpp  validator.cpp  valobject.cpp  vprof.cpp
ogs/tier1/: CMakeLists.txt  NetAdr.cpp  bitbuf.cpp  convar.cpp  fileio.cpp  interface_src.cpp  mempool.cpp  memstack.cpp  reliabletimer.cpp  strtools.cpp
ogs/unittests/: CMakeLists.txt  TestRunner.cpp  common_tests.cpp  crc32c_tests.cpp  delta_tests.cpp  info_tests.cpp  mathlib_tests.cpp  memory_tests.cpp  rehlds_tests_shared.cpp  rehlds_tests_shared.h  struct_offsets_tests.cpp  tmessage_tests.cpp  unicode_tests.cpp
ogs/unused/: bothdefs.h  files.c  glquake.h  menu.h  menu2.c  qfiles.h  skin.c
ogs/vgui/: .gitignore  App.cpp  Bitmap.cpp  BitmapTGA.cpp  Border.cpp  BorderLayout.cpp  BorderPair.cpp  BuildGroup.cpp  Button.cpp  CMakeLists.txt  CheckButton.cpp  Color.cpp  ConfigWizard.cpp  Cursor.cpp  DataInputStream.cpp  Desktop.cpp  DesktopIcon.cpp  EditPanel.cpp  EtchedBorder.cpp  FileInputStream.cpp  FlowLayout.cpp  FocusNavGroup.cpp  Font.cpp  Frame.cpp  GridLayout.cpp  Image.cpp  ImagePanel.cpp  IntLabel.cpp  Label.cpp  Layout.cpp  ListPanel.cpp  Menu.cpp  MenuItem.cpp  MenuSeparator.cpp  MessageBox.cpp  MiniApp.cpp  Panel.cpp  PopupMenu.cpp  ProgressBar.cpp  (+21 more)
(+2964 files in other folders)
